--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^1.8.4",
+    "chart.js": "^4.4.0",
     "firebase": "^9.22.2",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
