--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^1.8.4",
+    "ai-quiz": "^1.0.13",
     "chart.js": "^4.4.0",
     "firebase": "^9.22.2",
+    "papaparse": "^5.4.1",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
